# rekson

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml  deploy.yml  rust.yml  tdd.yml
rekson-lib/: Cargo.toml
rekson-lib/src/: chunks.rs  lib.rs
src/: chunks.rs  generator.rs  lexer.rs  main.rs  parser.rs
tests/: convert.rs  idempotent.rs
tests/common/: mod.rs
tests/input/: auto_quote.json  correct_colon.json  correct_quotes.json  fix_brackets.json  fix_value.json  insert_colon.json  lua.json  multiline_string.json  preserve_whitespaces.json  remove_comma.json  replace_parenthesis.json  strip_comment.jsonc
tests/output/: fix_brackets.json  fix_value.json  floats.json  insert_colon.json  lua.json  multiline_string.json  non_unicode.json  valid.json
web/: index.html
