[package]
name = "rekson-lib"
version = "0.0.1"
edition = "2021"
license = "MIT"
description = "A simple library to rectify json"
homepage = "https://github.com/pinbraerts/rekson"
repository = "https://github.com/pinbraerts/rekson"
readme = "README.md"
categories = ["command-line-utilities", "development-tools"]
keywords = ["json", "fix-json", "bad-json", "dirty-json"]

[dependencies]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
